--- a/QuizManager/QuizManager/ClientApp/package.json
+++ b/QuizManager/QuizManager/ClientApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
@@ -13,7 +14,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
@@ -34,7 +36,7 @@
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "lint": "eslint \"./src/**/*.js\" \"./src/**/*.jsx\""
   },
   "browserslist": {
     "production": [
