--- a/QuizManager/QuizManager/QuizManager.csproj
+++ b/QuizManager/QuizManager/QuizManager.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.3" />
   </ItemGroup>
 
