--- a/QuizManager/QuizManager/ClientApp/package.json
+++ b/QuizManager/QuizManager/ClientApp/package.json
@@ -8,7 +8,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "bootstrap": "^4.1.3",
-    "jquery": "^3.4.1",
+    "eslint-config-prettier": "^6.11.0",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.15",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
@@ -24,13 +25,15 @@
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "typescript": "^3.7.5",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3"
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.18.3",
+    "prettier": "^2.0.5",
+    "typescript": "^3.7.5"
   },
   "eslintConfig": {
     "extends": "react-app"
